--- a/F401_Menu_Interface/F401_Menu_Interface.ioc
+++ b/F401_Menu_Interface/F401_Menu_Interface.ioc
@@ -3,27 +3,29 @@ Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
 ProjectManager.ProjectFileName=F401_Menu_Interface.ioc
 RCC.CortexFreq_Value=84000000
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=encoderPolling,24,128,StartEncoderPolling,Default,NULL,Dynamic,NULL,NULL;displayUpdate,16,128,StartDisplayUpdate,Default,NULL,Dynamic,NULL,NULL
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F401CCUx
-Mcu.PinsNb=11
+Mcu.PinsNb=12
 ProjectManager.NoMain=false
 NVIC.SavedSvcallIrqHandlerGenerated=true
 RCC.PLLCLKFreq_Value=84000000
 RCC.PLLQCLKFreq_Value=42000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
 RCC.RTCFreq_Value=32000
 ProjectManager.DefaultFWLocation=true
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 ProjectManager.DeletePrevious=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PA2.GPIOParameters=GPIO_ModeDefaultEXTI
 SH.S_TIM2_CH1_ETR.ConfNb=1
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+SH.GPXTI2.0=GPIO_EXTI2
 PA13.Signal=SYS_JTMS-SWDIO
 Mcu.IP4=SYS
 RCC.FCLKCortexFreq_Value=84000000
@@ -36,6 +38,7 @@ SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 Mcu.IP0=FREERTOS
 Mcu.IP1=I2C1
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
+SH.GPXTI2.ConfNb=1
 Mcu.UserConstants=
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -51,22 +54,23 @@ SH.S_TIM2_CH2.ConfNb=1
 PB6.Signal=I2C1_SCL
 RCC.VcooutputI2S=192000000
 PB6.Mode=I2C
-Mcu.Pin6=PA14
-Mcu.Pin7=PB6
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
 ProjectManager.RegisterCallBack=
-Mcu.Pin8=PB7
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V2
-FREERTOS.IPParameters=Tasks01
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01
 RCC.LSE_VALUE=32768
 PA1.Signal=S_TIM2_CH2
 RCC.AHBFreq_Value=84000000
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 RCC.VCOI2SOutputFreq_Value=384000000
-Mcu.Pin5=PA13
+Mcu.Pin5=PA2
 ProjectManager.ProjectBuild=false
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.HSE_VALUE=25000000
@@ -97,11 +101,12 @@ PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
-VP_SYS_VS_tim11.Mode=TIM11
 Mcu.Name=STM32F401C(B-C)Ux
+VP_SYS_VS_tim11.Mode=TIM11
 ProjectManager.HalAssertFull=false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 RCC.RTCHSEDivFreq_Value=12500000
+PA2.Signal=GPXTI2
 ProjectManager.ProjectName=F401_Menu_Interface
 ProjectManager.UnderRoot=true
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
@@ -121,18 +126,24 @@ PB7.Mode=I2C
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 NVIC.TimeBaseIP=TIM11
 PA14.Signal=SYS_JTCK-SWCLK
+FREERTOS.FootprintOK=true
 ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ProjectManager.ComputerToolchain=false
 RCC.HSI_VALUE=16000000
+PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+FREERTOS.Mutexes01=mutex_position,Dynamic,NULL
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+Mcu.Pin11=VP_SYS_VS_tim11
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 RCC.PLLM=8
 RCC.PLLN=84
-Mcu.Pin10=VP_SYS_VS_tim11
+Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V2
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 RCC.APB1Freq_Value=42000000
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F401CCUx
 ProjectManager.LibraryCopy=1
+PA2.Locked=true
 isbadioc=false
