Buffer replaced by double stack

--- a/F401_Menu_Interface/F401_Menu_Interface.ioc
+++ b/F401_Menu_Interface/F401_Menu_Interface.ioc
@@ -3,7 +3,7 @@ Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
 ProjectManager.ProjectFileName=F401_Menu_Interface.ioc
 RCC.CortexFreq_Value=84000000
-FREERTOS.Tasks01=encoderPolling,24,128,StartEncoderPolling,Default,NULL,Dynamic,NULL,NULL;displayUpdate,16,128,StartDisplayUpdate,Default,NULL,Dynamic,NULL,NULL;lcdSendMessages,17,128,StartlcdSendMessages,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=encoderPolling,24,128,StartEncoderPolling,Default,NULL,Dynamic,NULL,NULL;oledDisplayUpda,16,128,StartOledDisplayUpdate,Default,NULL,Dynamic,NULL,NULL;lcdSendMessages,17,128,StartlcdSendMessages,Default,NULL,Dynamic,NULL,NULL;lcdDisplayUpdat,8,128,StartLcdDisplayUpdate,Default,NULL,Dynamic,NULL,NULL
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F401CCUx
 Mcu.PinsNb=12
@@ -132,7 +132,7 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ProjectManager.ComputerToolchain=false
 RCC.HSI_VALUE=16000000
 PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-FREERTOS.Mutexes01=mutex_position,Dynamic,NULL
+FREERTOS.Mutexes01=mutex_position,Dynamic,NULL;mutex_cursor,Dynamic,NULL
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=VP_SYS_VS_tim11
 NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
